--- a/style.css
+++ b/style.css
@@ -11,3 +11,13 @@ header{
 body{
     background-color: #2B2D42;
 }
+
+footer{
+   text-align: center;
+    color: #FFDD4A;
+    font-size: 15px;
+    border-bottom: 2px solid #8E9DCC;
+    border-top: 2px solid #8E9DCC;
+    padding-top: 10px;
+    padding-bottom: 10px; 
+}
