--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ footer{
 }
 
 .contain{
-    margin-left: 500px;
+    margin-left: 480px;
 }
 
 table{
@@ -32,9 +32,23 @@ table{
     border-left: 2px solid #8E9DCC;
     border-right: 2px solid #8E9DCC;
     border-collapse: collapse;
+    width: 500px;
 }
 
 td{
     border-bottom: 2px solid #8E9DCC;
     border-collapse: collapse;
+    text-align: right;
+}
+
+.singer-image{
+    border: 3px solid #8E9DCC;
+    width:300px;
+    height: 350px;
+    padding: 4px;
+    margin: 3px;
+}
+
+.photo{
+    text-align: center;
 }
