--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ table{
     border-left: 2px solid #8E9DCC;
     border-right: 2px solid #8E9DCC;
     border-collapse: collapse;
-    width: 500px;
     margin-top: 30px;
     margin-bottom: 30px;
+    tab-size: 600px;
 }
 
-td{
+td,th{
     border-bottom: 2px solid #8E9DCC;
     border-collapse: collapse;
     text-align: right;
@@ -57,48 +57,44 @@ td{
 
 .Instagram{
     font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 10px;
     text-align: start;
 }
 
 .Youtube{
     font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 10px;
     text-align: start;
 }
 
 .Spotify{
     font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 10px;
     text-align: start;
 }
 
 .Site{
     font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    font-weight: bold;
-    margin-right: 100px;
+    padding-top: 15px;
+    padding-bottom: 10px;
     text-align: start;
+    row-gap: ;
 }
 
 .X{
-    font-size: 20px;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 10px;
     text-align: start;
 }
 
 a{
     text-decoration: none;
     color: #FF715B;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 img{
@@ -106,28 +102,52 @@ img{
 }
 
 .site_icon{
-    padding-right: 200px;
     padding-left: 80px;
+}
+
+.site_link{
+    padding-right: 100px;
 }
 
 .X_icon{
-    padding-right: 230px;
     padding-left: 80px;
 }
+
+.X_link{
+    padding-right: 120px;
+}
+
 .instagram_icon{
-    padding-right: 210px;
     padding-left: 80px;
 }
+
+.Instagram_link{
+    padding-right: 110px;
+}
+
 .spotify_icon{
-    padding-right: 227px;
     padding-left: 80px;
+}
+
+.Spotify_link{
+    padding-right: 120px;
 }
 
 .youtube_icon{
-    padding-right: 220px;
     padding-left: 80px;
 }
+.Youtube_link{
+    padding-right: 110px;
+}
 
-td:hover{
+tr:hover{
     background-color: #8E9DCC
+}
+
+th:hover{
+    background-color: #8E9DCC
+}
+
+.Empty{
+    margin:0;
 }
